# Crewai-Flows-Researcher-Content

./: .gitignore  README.md  guide_creator_flow.html  pyproject.toml
output/: complete_guide.md  guide_outline.json
setup/: install.txt
src/researcher_content/: main.py
src/researcher_content/crews/content_crew/: content_crew.py
src/researcher_content/crews/content_crew/config/: agents.yaml  tasks.yaml
