[project]
name = "reasearcher_content"
version = "0.1.0"
description = "reasearcher_content using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
]

[project.scripts]
kickoff = "reasearcher_content.main:kickoff"
plot = "reasearcher_content.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
